# bool-todo

./: .gitignore  LICENSE  api_request.py  dashboard.py  flet.pubspec_overrides.yaml  global_store.py  login.py  main.py  nav.py  page_manager.py  pyinstaller.txt  pyproject.toml  shiqu-note.spec  shiqu-todo.spec  task.py  task_detail.py  tasklist.py
src/: dashboard.py  login.py  main.py  nav.py  task.py  task_detail.py  tasklist.py
utils/: bool-todo.desktop  build_deb.sh
