[project]
name = "shiqu-todo"
version = "2.1.0"
description = "一个轻量级全功能的待办清单软件。"
authors = [
  {name = "Hunter Zhang", email = "riverbird@aliyun.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flet==0.28.3",
    "requests>=2.32.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.flet]
org = "com.superiot"
product = "shiqu-todo"
company = "浙江舒博特网络科技有限公司"
copyright = "Copyright (C) 2025 by Superiot"
product_name = "布尔清单"

[tool.flet.android]
split_per_abi = true

[tool.flet.splash]   # 原生层
color   = "#ffffff"
image   = "assets/splash_android.png"
android = false
ios     = false

